--- a/client/src/components/SyllabusForm.css
+++ b/client/src/components/SyllabusForm.css
@@ -1411,25 +1411,20 @@
   /* Garantir que o logo não interfira no conteúdo */
   .pdf-container {
     position: relative !important;
-    padding-top: 0 !important;
+    padding-top: 75px !important;
     margin-top: 0 !important;
   }
   
   /* Adicionar padding superior na primeira seção para evitar sobreposição do logo */
   .pdf-container > div:first-child {
-    padding-top: 70px !important;
+    padding-top: 0 !important;
     margin-top: 0 !important;
   }
   
   /* Garantir que todas as seções tenham espaço suficiente no topo quando começam uma nova página */
   .pdf-container > div {
-    padding-top: 65px !important;
+    padding-top: 0 !important;
     margin-top: 0 !important;
-  }
-  
-  /* A primeira seção já tem padding-top definido acima, então resetar aqui */
-  .pdf-container > div:first-child {
-    padding-top: 70px !important;
   }
   
   /* Garantir que o primeiro elemento dentro de cada seção não adicione padding extra */
@@ -1439,20 +1434,13 @@
   }
   
   /* IMPORTANTE: Garantir que quando o conteúdo quebra para uma nova página no meio de um parágrafo,
-     ele tenha espaço suficiente. Usamos padding-top em todos os elementos que podem quebrar */
+     ele tenha espaço suficiente. Adicionar padding-top em elementos que podem quebrar */
   .pdf-container p,
   .pdf-container div[style*="fontSize"],
   .pdf-container ul,
-  .pdf-container ol,
-  .pdf-container li {
+  .pdf-container ol {
     padding-top: 0 !important;
     margin-top: 0 !important;
-  }
-  
-  /* Quando um parágrafo ou div quebra para uma nova página, garantir espaço no topo */
-  .pdf-container p:first-of-type,
-  .pdf-container > div > div:first-of-type {
-    padding-top: 0 !important;
   }
   
   /* Garantir que títulos não sejam sobrepostos pelo logo */
@@ -1467,21 +1455,6 @@
     padding-top: 0 !important;
   }
   
-  /* Adicionar espaço no topo de elementos que podem quebrar para nova página */
-  .pdf-container > div::before {
-    content: '';
-    display: block;
-    height: 65px;
-    margin-top: -65px;
-    page-break-after: avoid;
-  }
-  
-  /* Primeira seção tem mais espaço */
-  .pdf-container > div:first-child::before {
-    height: 70px;
-    margin-top: -70px;
-  }
-  
   .pdf-container > * {
     position: relative !important;
     z-index: 1 !important;
@@ -1490,11 +1463,11 @@
   /* Configurações de página A4 - aumentar margem superior para garantir espaço para o logo */
   @page {
     size: A4;
-    margin: 70px 20mm 20mm 20mm;
+    margin: 75px 20mm 20mm 20mm;
   }
   
   @page:first {
-    margin-top: 70px;
+    margin-top: 75px;
   }
   
   /* Logo fixo em todas as páginas usando pseudo-elemento */
