--- a/client/src/components/SyllabusForm.css
+++ b/client/src/components/SyllabusForm.css
@@ -1488,16 +1488,7 @@
     padding-top: 0 !important;
   }
   
-  /* Adicionar um elemento spacer invisível no início de cada seção que cria espaço quando quebra */
-  .pdf-container > div::before {
-    content: '';
-    display: block;
-    height: 0;
-    margin-top: 0;
-    page-break-after: avoid;
-  }
-  
-  /* Quando uma seção quebra para nova página, o pseudo-elemento cria espaço */
+  /* Adicionar um elemento spacer invisível no início de cada seção que cria espaço quando quebra para nova página */
   .pdf-container > div {
     position: relative;
   }
