--- a/client/src/components/SyllabusForm.css
+++ b/client/src/components/SyllabusForm.css
@@ -1417,7 +1417,7 @@
   
   /* Adicionar padding superior apenas na primeira seção para evitar sobreposição do logo */
   .pdf-container > div:first-child {
-    padding-top: 85px !important;
+    padding-top: 110px !important;
     margin-top: 0 !important;
   }
   
@@ -1495,8 +1495,8 @@
   
   /* Títulos que aparecem no início de uma nova página precisam de espaço extra */
   .pdf-container > div h3:first-of-type {
-    margin-top: 10px !important;
-    padding-top: 0 !important;
+    margin-top: 0 !important;
+    padding-top: 110px !important;
   }
   
   /* Adicionar espaço no topo quando conteúdo quebra para nova página usando orphans/widows */
@@ -1515,11 +1515,11 @@
   /* Configurações de página A4 - margem superior maior para garantir espaço para o logo em continuações */
   @page {
     size: A4;
-    margin: 85px 20mm 20mm 20mm;
+    margin: 110px 20mm 20mm 20mm;
   }
   
   @page:first {
-    margin-top: 85px;
+    margin-top: 110px;
   }
   
   /* Logo fixo em todas as páginas usando pseudo-elemento */
