--- a/client/src/components/SyllabusForm.css
+++ b/client/src/components/SyllabusForm.css
@@ -1395,8 +1395,8 @@
     display: block !important;
     visibility: visible !important;
     position: fixed !important;
-    top: 0 !important;
-    left: 0 !important;
+    top: 20mm !important;
+    left: 20mm !important;
     width: auto !important;
     height: 55px !important;
     z-index: 9999 !important;
