--- a/client/src/components/SyllabusForm.css
+++ b/client/src/components/SyllabusForm.css
@@ -1390,13 +1390,13 @@
     visibility: hidden !important;
   }
   
-  /* Logo fixo em todas as páginas - position fixed funciona no print */
+  /* Logo fixo em todas as páginas - dentro da margem da página */
   .pdf-logo-fixed {
     display: block !important;
     visibility: visible !important;
     position: fixed !important;
-    top: 0 !important;
-    left: 0 !important;
+    top: 20mm !important;
+    left: 20mm !important;
     width: auto !important;
     height: 55px !important;
     z-index: 9999 !important;
@@ -1447,14 +1447,15 @@
     z-index: 1 !important;
   }
   
-  /* Configurações de página A4 - margem superior para o logo (55px) + espaço extra (20px) = 75px */
+  /* Configurações de página A4 - margem superior para espaço após o logo */
+  /* Logo tem 55px, então margem de 80px garante espaço suficiente */
   @page {
     size: A4;
-    margin: 75px 20mm 20mm 20mm;
+    margin: 80px 20mm 20mm 20mm;
   }
   
   @page:first {
-    margin-top: 75px;
+    margin-top: 80px;
   }
   
   /* Logo fixo em todas as páginas usando pseudo-elemento */
